--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         shell: bash
         run: |
           7z a test.zip ./*
-#          7z a test.zip ./egWebOS/info.py
+          7z a test.zip ./egWebOS/info.py
       - name: Upload result to cache
         uses: actions/upload-artifact@v2
         with:
