--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,11 @@ jobs:
       - name: pack plugin
         shell: bash
         run: |
-          7z a test.zip ./*
-          7z a test.zip ./egWebOS/info.py
+          7z a test.egplugin ./*
+          7z a test.egplugin ./egWebOS/info.py
       - name: Upload result to cache
         uses: actions/upload-artifact@v2
         with:
           name: result
-          path: ./test.zip
+          path: ./test.egplugin
           retention-days: 1
