--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v2
 
+      - name: pack plugin
+        shell: bash
+        run: |
+          7z a -tzip test0.5.egplugin ./*
+          7z a -tzip test0.5.egplugin ./egWebOS/info.py
+
       - name: Get PyWebOSTV
         shell: bash
         run: |
@@ -32,12 +38,12 @@ jobs:
       - name: pack plugin
         shell: bash
         run: |
-          7z a -tzip test.egplugin ./*
-          7z a -tzip test.egplugin ./egWebOS/info.py
+          7z a -tzip test0.4.egplugin ./*
+          7z a -tzip test0.4.egplugin ./egWebOS/info.py
       - name: Upload result to cache
         uses: actions/upload-artifact@v2
         with:
           name: result
 #          path: ./test.egplugin
-          path: ./
+          path: ./test*
           retention-days: 1
