--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,3 +71,5 @@ jobs:
       - name: Create release
         shell: bash
         run: gh release create ${{ steps.get_version.outputs.version }} -t "WebOS connect ${{ steps.get_version.outputs.version }}" -n "New version" ./*.egplugin
+        env:
+					GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
